# polymarket-trades

./: .gitignore  CLAUDE.md  Procfile  README.md  TODO.md  justfile  pyproject.toml  pyrightconfig.json
plans/: web-ui-fastapi.md
src/polymarket_trades/: __init__.py  __main__.py
src/polymarket_trades/application/: cli.py  container.py  scheduler.py
src/polymarket_trades/application/use_cases/: execute_trade.py  monitor_positions.py  reconcile_on_startup.py  reconcile_positions.py  scan_opportunities.py  unwind_position.py
src/polymarket_trades/domain/entities/: __init__.py  event.py  market.py  position.py
src/polymarket_trades/domain/ports/: __init__.py  event_discovery.py  opportunity_store.py  position_tracker.py  pricing.py  trading.py
src/polymarket_trades/domain/services/: fee_calculator.py  risk_manager.py  scanner.py
src/polymarket_trades/domain/strategies/: detector_protocol.py  opportunity.py
src/polymarket_trades/domain/value_objects/: __init__.py  money.py  outcome.py  price.py  resolution_outcome.py  token_id.py  (+1 more)
tests/: conftest.py
tests/application/: test_cli.py  test_container.py  test_execute_trade.py  test_monitor_positions.py  test_reconcile.py  test_scan_opportunities.py  test_scheduler.py
tests/domain/: test_arbitrage_detector.py  test_entities.py  test_fee_calculator.py  test_near_certain_detector.py  test_neg_risk_detector.py  test_opportunity_sort.py  test_risk_manager.py  test_scanner.py  test_value_objects.py
tests/infrastructure/: test_clob_client.py  test_gamma_client.py  test_rate_limiter.py  test_sqlite_stores.py
(+21 files in other folders)
