[project]
name = "polymarket-trades"
version = "0.1.0"
description = "Low-risk automated trading bot for Polymarket"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "py-clob-client>=0.18",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.12",
    "aiosqlite>=0.20",
    "rich>=13.0",
    "structlog>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_trades"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
target-version = "py313"
line-length = 100
